fix: project description text wraps and no overflows gf-150

--- a/apps/frontend/src/pages/project/styles.module.css
+++ b/apps/frontend/src/pages/project/styles.module.css
@@ -31,4 +31,5 @@
 	margin: 0;
 	font-size: 16px;
 	line-height: 150%;
+	word-break: break-word;
 }
